# swi-avalanche-caching

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-build-push.yml
source/maps_processing/: avalanche_forecast_processing.py  maps_caching.py
src/: avalanche_forecast_processing.py  shape_gen.py
