[project]
name = "swi-avalanche-caching"
version = "0.1.0"
description = "This is a cron task to prepare map layer to display the avalanche forecast"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]
